--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The BattleShip game",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/tushar-droid/Battleship#readme",
   "devDependencies": {
     "css-loader": "^6.8.1",
+    "jest": "^29.7.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
