added script to deploy the game on git pages

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The BattleShip game",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "repository": {
     "type": "git",
